--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,26 @@
-
+TODO
+- some basic shader dynamic lightning so that objects are easier to understand
+- mouse_picker proper screen size
+- mouse_picker class has to be aware of editmode, so that highlight can be turned off
+- WorldCoordinate (terrain.cpp), same data, two places?
+- global_state class
+- mouse_picker.cpp screen size
+- entities
 - save states, persistant memory for saving map etc
 - more ui elements (button, textbox, selecting)
 - ui picking 
 - bug: camera pitch max down
 - render region
 
-- thread class
-- world over 100x100
+FINISHED
+- multithreading class
+- world over 100x100 bug
 - mouse picking
+
+f 25/1/1 2/2/1 27/3/1
+f 31/4/2 3/5/2 29/6/2
+f 20/7/3 31/4/3 33/8/3
+f 29/6/4 1/9/4 25/1/4
+
+
++		Line	"25/1/1 2/2/1 27/3/1"	std::string
