--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,19 @@
 TODO
-- some basic shader dynamic lightning so that objects are easier to understand
 - mouse_picker proper screen size
 - mouse_picker class has to be aware of editmode, so that highlight can be turned off
 - WorldCoordinate (terrain.cpp), same data, two places?
 - global_state class
 - mouse_picker.cpp screen size
 - entities
-- save states, persistant memory for saving map etc
 - more ui elements (button, textbox, selecting)
 - ui picking 
+- ui tile selecting
 - bug: camera pitch max down
 - render region
 
 FINISHED
+- some basic shader dynamic lightning so that objects are easier to understand
+- save states, persistant memory for saving map etc
 - multithreading class
 - world over 100x100 bug
 - mouse picking
